sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:22: error: not found: value e
} while(ecart>1 || e )
                   ^